--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     </div>
 </section>
 
+<section id="hero">
+    <h4>online-trade-Center</h4>
+    <h2>Super Value deals</h2>
+    <h1>On all products</h1>
+    <p>the best place to transact online</p>
+    <button>Shop now</button>
+</section>
+
     
 
     <script src="main.js"></script>
