--- a/index.html
+++ b/index.html
@@ -31,6 +31,29 @@
     <button>Shop now</button>
 </section>
 
+<section id="feature" class="section-p1">
+    <div class="fe-box">
+        <img src="image/fe-1.png" width="100px" alt="">
+        <h6>free shipping</h6>
+    </div>
+    <div class="fe-box">
+        <img src="image/fe-2.png" width="100px" alt="">
+        <h6>free shipping</h6>
+    </div>
+    <div class="fe-box">
+        <img src="image/fe-3.png" width="100px" alt="">
+        <h6>free shipping</h6>
+    </div>
+    <div class="fe-box">
+        <img src="image/fe-4.png" width="100px" alt="">
+        <h6>free shipping</h6>
+    </div>
+    <div class="fe-box">
+        <img src="image/fe-5.png" width="100px" alt="">
+        <h6>free shipping</h6>
+    </div>
+</section>
+
     
 
     <script src="main.js"></script>
